--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*
+/*!
 Theme Name: Tecnibo
 Theme URI: https://github.com/younes-dro/tecnibo-theme
 Description: Tecnibo theme.
@@ -7,166 +7,177 @@ Author URI: https://github.com/younes-dro
 Template: oceanwp
 Version: 1.0
 */
+/*--------------------------------------------------------------
+# Variables (Colors)
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+## Body 
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+## Headers
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+## Breadcrumbs
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+## Heading ( h1,h2,h3,h4,h5,h6)
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+## Main Menu
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+## Paragraph
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+## Language Switcher
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# Typography
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# Menus Navigation ( Main Menu , Mobile Menu, Footer Menu )
+--------------------------------------------------------------*/
+/***************** Main Menu **********************************************/
+.sf-menu ul.sub-menu {
+  padding: 20px 10px;
+}
 
-body{
-    position: relative;
-    padding: 0;
-    background: #fff;
-    color: #554b4a;
-    font-family: 'Merriweather', serif;
-    font-size: 14px;
+.navigation > ul > li > ul.megamenu.sub-menu > li {
+  border-left-width: 0px;
+}
+
+#site-navigation-wrap nav#site-navigation ul#menu-main-menu li.menu-item a {
+  /*border:1px solid #f00;*/
+  font-size: 16px;
+  font-family: "Oswald", sans-serif;
+  font-weight: 300 !important;
+  color: #554b4a;
+}
+
+#site-navigation-wrap nav#site-navigation ul#menu-main-menu li.menu-item a:hover {
+  color: #e80100;
+}
+
+#site-navigation-wrap nav#site-navigation ul#menu-main-menu li.menu-item ul.sub-menu a {
+  /*border: 1px solid #f0f;*/
+}
+
+#site-navigation-wrap nav#site-navigation ul#menu-main-menu li.menu-item ul.sub-menu a:hover {
+  /*color: #e80100;*/
+}
+
+.dropdown-menu .sub-menu {
+  border-color: #13aff0 !important;
+}
+
+.sf-menu ul.sub-menu {
+  top: 109% !important;
+}
+
+.navigation .megamenu li ul.sub-menu {
+  border: none !important;
+}
+
+/*--------------------------------------------------------------
+# Site
+--------------------------------------------------------------*/
+body {
+  position: relative;
+  padding: 0;
+  background: #fff;
+  color: #554b4a;
+  font-family: "Merriweather", serif;
+  font-size: 14px;
 }
 
 h1 {
-    font-size: 30px;
+  font-size: 30px;
 }
+
 h2 {
-    font-size: 24px;
+  font-size: 24px;
 }
+
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Oswald', sans-serif!important;
-    color: #867e79;    
-    font-weight: 400;
+  font-family: "Oswald", sans-serif !important;
+  color: #867e79;
+  font-weight: 400;
+}
 
+p {
+  font-family: "Merriweather", serif;
+  color: #867e79;
+  font-size: 1.5em;
 }
-p{
-    font-family: 'Merriweather', serif;
-    color: #867e79;
-    font-size: 1.5em;    
-}
+
 /* Parent stylesheet should be loaded from functions.php not using @import */
-#topbar-template{
-    /*border: 1px solid;*/
-    width: 100%;
-    margin: 0 auto;
-    padding-left: 10px;
-    padding-right: 10px; 
+#topbar-template {
+  /*border: 1px solid;*/
+  width: 100%;
+  margin: 0 auto;
+  padding-left: 10px;
+  padding-right: 10px;
 }
+
 /* Langauge Switcher */
-trp-ls-shortcode-current-language{
-    background-color: #f5f5f5;
+trp-ls-shortcode-current-language {
+  background-color: #f5f5f5;
 }
+
 /* Header */
-
-.mobile-menu .hamburger-inner, .mobile-menu .hamburger-inner::before, .mobile-menu .hamburger-inner::after{
-    background-color: #867e79!important; 
+#site-header.transparent-header {
+  height: 80px !important;
+  margin-bottom: 0px !important;
+  z-index: 1 !important;
 }
 
-#site-header.transparent-header{
-    height: 80px!important;
-    margin-bottom: 0px!important;
-    z-index:1!important;
+.page-header {
+  padding: 0px !important;
+  background-color: #fff !important;
+  /* border: 1px solid; */
+  margin-top: 0px;
+  margin-bottom: 0px;
+  min-height: 1px;
 }
-.page-header{
-    padding: 0px !important;
-    background-color: #fff !important;
-    /* border: 1px solid; */
-    margin-top: 0px;
-    margin-bottom: 0px;
-    min-height: 1px;  
+
+.sticky-header {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  animation: slide-down 0.7s;
+  box-shadow: 1px 1px 4px;
 }
-.sticky-header{
-    position: fixed!important;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    width: 100%;
-    animation: slide-down 0.7s;
-    box-shadow: 1px 1px 4px;    
-}
+
 @keyframes slide-down {
-    0% {
-        opacity: 0;
-        transform: translateY(-100%);
-    } 
-    100% {
-        opacity: 0.9;
-        transform: translateY(0);
-    } 
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 0.9;
+    transform: translateY(0);
+  }
 }
-/***************** Main Menu **********************************************/
-.sf-menu ul.sub-menu{
-    padding: 20px 10px;
-}
-.navigation>ul>li>ul.megamenu.sub-menu>li{
-    border-left-width: 0px;
-
-}
-#site-navigation-wrap nav#site-navigation ul#menu-main-menu li.menu-item a{
-    /*border:1px solid #f00;*/
-    font-size: 16px;
-    font-family: Oswald,sans-serif;
-    font-weight: 300!important;
-    color: #554b4a;
-}
-#site-navigation-wrap nav#site-navigation ul#menu-main-menu li.menu-item a:hover{
-    color:#e80100;
-}
-#site-navigation-wrap nav#site-navigation ul#menu-main-menu li.menu-item ul.sub-menu a{
-    /*border: 1px solid #f0f;*/
-}
-#site-navigation-wrap nav#site-navigation ul#menu-main-menu li.menu-item ul.sub-menu a:hover{
-    /*color: #e80100;*/
-}
-.dropdown-menu .sub-menu {
-    border-color: #13aff0!important;
-}
-.sf-menu ul.sub-menu{
-    top:109%!important;
-}
-.navigation .megamenu li ul.sub-menu{
-    border:none!important;
-}
-/***************** End Menu ********************/
-
-/***************** Custom arrow smart slider ********************************/
-div#n2-ss-1 .nextend-arrow{
-    /*    border: .125rem solid #e6e6e6;
-        border-radius: 50%    */
-}
-/***************** End Custom arrow smart slider ****************************/
-
 /* Custom Header for pages  */
-#site-header.transparent-header{
-    position: relative!important;
-    background-color:#fff!important;
-}
-/* Privacy menu */
-.privacy-menu-container{
-    line-height:60px;
-}
-ul#menu-privacy-menu{
-    list-style-type: none;
-    line-height:1px;
-    margin:0 auto;
-}
-ul#menu-privacy-menu li{
-    float: right;
-    margin-left: 10px;
-}
-ul#menu-privacy-menu li a{
-    color: #554b4a;
-    text-decoration: underline;
-    font-size:12px;
-}
-ul#menu-privacy-menu li a:hover{
-    text-decoration: none;
-}
-@media screen and (min-width: 768px){
-    div.copyright-title{
-        text-align: left!important;
-    }   
+#site-header.transparent-header {
+  position: relative !important;
+  background-color: #fff !important;
 }
 
 /* breadcrumbs */
-header.page-header nav.site-breadcrumbs{
-    /*border: 1px solid #f00;*/
-    left: 0;
-    top: 22px;
+header.page-header nav.site-breadcrumbs {
+  /*border: 1px solid #f00;*/
+  left: 0;
+  top: 22px;
 }
-header.page-header .site-breadcrumbs a{
-    color: #867e79 !important;
-    /*border: 1px solid #f00;*/
-    /*left: 0;*/
-    /*top: 12px;*/
+
+header.page-header .site-breadcrumbs a {
+  color: #867e79 !important;
+  /*border: 1px solid #f00;*/
+  /*left: 0;*/
+  /*top: 12px;*/
 }
+
+/*# sourceMappingURL=style.css.map */
