Add first test dro sliding menu

--- a/sass/navigation/_navigation.scss
+++ b/sass/navigation/_navigation.scss
@@ -1,3 +1,5 @@
+/***************** Mobile Menu**********************************************/
+@import "mobile-menu";
 /***************** Main Menu **********************************************/
 .sf-menu ul.sub-menu{
     padding: 20px 10px;
