--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ trp-ls-shortcode-current-language {
 #site-header.transparent-header {
   height: 80px !important;
   margin-bottom: 0px !important;
-  z-index: 1 !important;
+  z-index: 12 !important;
 }
 
 .page-header {
@@ -139,6 +139,278 @@ header.page-header .site-breadcrumbs a {
 /*--------------------------------------------------------------
 # Menus Navigation ( Main Menu , Mobile Menu, Footer Menu )
 --------------------------------------------------------------*/
+/***************** Mobile Menu**********************************************/
+body.wp_mm_enable {
+  overflow: hidden;
+}
+
+.body_overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.9);
+  z-index: 998;
+  display: none;
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+
+.body_overlay.enabled {
+  display: block;
+  opacity: 1;
+}
+
+.wp_mm_wrapper.active {
+  z-index: 999;
+  opacity: 1;
+  right: 0;
+}
+.wp_mm_wrapper.active ul.main-menu {
+  display: block;
+}
+
+.wp_mm_wrapper {
+  height: calc(100vh - 80px);
+  overflow-y: scroll;
+  overflow-x: hidden;
+  position: fixed;
+  right: -300px;
+  bottom: 0;
+  z-index: -9;
+  width: 300px;
+  opacity: 0;
+  background: black;
+  -webkit-transition: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  transition: right 0.5s;
+  /*box-sh*/
+  /* ul.main-menu*/
+}
+.wp_mm_wrapper ul.main-menu {
+  position: relative;
+  display: none;
+  margin: 0 0 0 2px;
+}
+.wp_mm_wrapper ul.main-menu a:not(.forward) {
+  display: block;
+  color: #fff;
+  padding: 20px 15px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: 300;
+  font-family: sans-serif;
+}
+.wp_mm_wrapper ul.main-menu > li > a {
+  color: #fdb84e;
+}
+.wp_mm_wrapper ul.main-menu li.back a {
+  font-size: 13px;
+  width: 50%;
+  margin: 0 auto;
+  font-family: sans-serif;
+}
+.wp_mm_wrapper ul.main-menu .sub-menu, .wp_mm_wrapper ul.main-menu .children {
+  background-color: #000000;
+  height: 100%;
+  position: absolute;
+  right: -100%;
+  top: 0;
+  transition: all 0.5s ease 0s;
+  width: 100%;
+  z-index: 999;
+}
+.wp_mm_wrapper ul.main-menu li {
+  list-style-type: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0);
+  border-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, #7ac1b7 20%, #7ac1b7 50%, #7ac1b7 80%, rgba(0, 0, 0, 0) 100%) 0 0 1 0;
+  color: #ffffff;
+  height: 60px;
+}
+.wp_mm_wrapper ul.main-menu li.active > .sub-menu,
+.wp_mm_wrapper ul.main-menu li.active > .children {
+  right: 0;
+}
+.wp_mm_wrapper ul.main-menu li.page_item_has_children > a,
+.wp_mm_wrapper ul.main-menu li.menu-item-has-children > a {
+  width: 50%;
+}
+.wp_mm_wrapper ul.main-menu li.page_item_has_children a.forward,
+.wp_mm_wrapper ul.main-menu li.menu-item-has-children a.forward {
+  font-size: 24px;
+  cursor: pointer;
+  border: 1px solid;
+  width: 50px;
+  /* line-height: 1rem; */
+  text-align: center;
+  color: #fff;
+}
+.wp_mm_wrapper ul.main-menu ul.sub-menu.megamenu div {
+  /*display: none;*/
+}
+.wp_mm_wrapper ul.main-menu div.tecnibo-widget-submenu-1col {
+  padding-left: 22px;
+  border: none;
+}
+.wp_mm_wrapper ul.main-menu h2.title-cat {
+  color: #fff;
+  font-size: 12px;
+}
+.wp_mm_wrapper ul.main-menu span.text-wrap > span.nav-arrow {
+  display: none;
+}
+.wp_mm_wrapper ul.main-menu div.tecnibo-widget-submenu-1col h1 {
+  font-size: 15px;
+  font-weight: 400;
+  color: #f2f3f3;
+}
+.wp_mm_wrapper ul.main-menu div.tecnibo-widget-submenu-1col p {
+  font-size: 12px;
+  color: #f2f3f3;
+}
+.wp_mm_wrapper ul.main-menu div.tecnibo-widget-submenu-1col a {
+  padding: 10px 5px;
+  text-align: center;
+  border: none;
+}
+.wp_mm_wrapper .current_page_item > a,
+.wp_mm_wrapper .current-menu-item > a,
+.wp_mm_wrapper .current_page_item > a:hover,
+.wp_mm_wrapper .current-menu-item > a:hover {
+  color: #313131;
+  border-left: 2px solid #7ac1b7;
+}
+
+a.forward {
+  float: right;
+  margin: 20px 10px 0 0;
+}
+
+span.left {
+  float: left;
+  margin: 20px 0 0 20px;
+}
+
+#toggle-menu-container {
+  position: absolute;
+  z-index: 99999;
+  right: 0px;
+  top: 20px;
+  height: 50px;
+}
+
+#toggle-menu {
+  cursor: pointer;
+  /*float: right;*/
+  border: none !important;
+  height: 45px;
+  width: 45px;
+  position: absolute;
+  right: 10px;
+  top: 0px;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: all 0.5s ease-in-out 0s;
+  -moz-transition: all 0.5s ease-in-out 0s;
+  -o-transition: all 0.5s ease-in-out 0s;
+  transition: all 0.5s ease-in-out 0s;
+  z-index: 9999;
+  background-color: #fff;
+  border-radius: 0;
+}
+#toggle-menu span {
+  background-color: #919191;
+  border-radius: 5px;
+  display: block;
+  height: 1px;
+  left: 0;
+  width: 45px;
+  opacity: 1;
+  position: absolute;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: all 0.25s ease-in-out 0s;
+  -moz-transition: all 0.25s ease-in-out 0s;
+  -o-transition: all 0.25s ease-in-out 0s;
+  transition: all 0.25s ease-in-out 0s;
+}
+#toggle-menu span:nth-child(1) {
+  top: 5px;
+}
+#toggle-menu span:nth-child(2),
+#toggle-menu span:nth-child(3) {
+  top: 20px;
+}
+#toggle-menu span:nth-child(4) {
+  top: 35px;
+}
+
+#toggle-menu.open span:nth-child(1) {
+  left: 50%;
+  top: 18px;
+  width: 0;
+}
+#toggle-menu.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+#toggle-menu.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+#toggle-menu.open span:nth-child(4) {
+  left: 50%;
+  top: 18px;
+  width: 0;
+}
+
+#toggle-menu-container {
+  display: none;
+}
+@media screen and (min-width: 959px) {
+  #toggle-menu-container {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 959px) {
+  body.default-breakpoint .oceanwp-mobile-menu-icon {
+    display: none !important;
+  }
+}
+@media screen and (min-width: 992px) {
+  body.wp_mm_enable {
+    /*overflow: visible;*/
+  }
+}
+
+div.tecnibo-language-switcher.trp-language-switcher-container {
+  position: absolute;
+  left: 50%;
+  top: 20px;
+}
+@media screen and (min-width: 959px) {
+  div.tecnibo-language-switcher.trp-language-switcher-container {
+    display: none;
+  }
+}
+
+div#wrap #top-bar-wrap {
+  display: none;
+}
+@media screen and (min-width: 959px) {
+  div#wrap #top-bar-wrap {
+    display: block;
+  }
+}
+
 /***************** Main Menu **********************************************/
 .sf-menu ul.sub-menu {
   padding: 20px 10px;
