--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ html.wp_mm_enable, body.wp_mm_enable {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.9);
+  background: #0000004d;
   z-index: 998;
   display: none;
   opacity: 0;
@@ -188,7 +188,7 @@ html.wp_mm_enable, body.wp_mm_enable {
   z-index: -9;
   width: 300px;
   opacity: 0;
-  background: #0d0d0d;
+  background-image: linear-gradient(to top left, #454800, #000);
   -webkit-transition: opacity 0.2s;
   -moz-transition: opacity 0.2s;
   transition: right 0.5s;
@@ -205,14 +205,12 @@ html.wp_mm_enable, body.wp_mm_enable {
   color: #fff;
   padding: 20px 15px;
   letter-spacing: 1px;
-  text-transform: uppercase;
   text-decoration: none;
-  font-size: 12px;
-  font-weight: 300;
-  font-family: sans-serif;
+  font-size: 15px;
+  font-weight: initial;
 }
 .wp_mm_wrapper ul.main-menu > li > a {
-  color: #fdb84e;
+  color: #fff;
 }
 .wp_mm_wrapper ul.main-menu li.back a {
   font-size: 13px;
@@ -222,14 +220,14 @@ html.wp_mm_enable, body.wp_mm_enable {
   padding-top: 32px;
 }
 .wp_mm_wrapper ul.main-menu li.backDiv > a {
-  /*background-color: #919191;*/
+  border: none;
 }
 .wp_mm_wrapper ul.main-menu li.backDiv > a :hover {
   background-color: #000 !important;
 }
 .wp_mm_wrapper ul.main-menu .sub-menu, .wp_mm_wrapper ul.main-menu .children {
-  background-color: #0d0d0d;
-  height: 200%;
+  background-image: linear-gradient(to top left, #454800, #000);
+  min-height: 100%;
   position: absolute;
   right: -100%;
   top: 0;
@@ -243,7 +241,7 @@ html.wp_mm_enable, body.wp_mm_enable {
 .wp_mm_wrapper ul.main-menu li {
   list-style-type: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0);
-  border-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, #7ac1b7 20%, #7ac1b7 50%, #7ac1b7 80%, rgba(0, 0, 0, 0) 100%) 0 0 1 0;
+  border-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, #aab203 20%, #aab203 50%, #aab203 80%, rgba(0, 0, 0, 0) 100%) 0 0 1 0;
   color: #ffffff;
   height: 75px;
   padding-top: 5px;
@@ -288,26 +286,42 @@ html.wp_mm_enable, body.wp_mm_enable {
 }
 .wp_mm_wrapper ul.main-menu h2.title-cat {
   color: #fff;
-  font-size: 12px;
+  font-size: 14px;
 }
 .wp_mm_wrapper ul.main-menu span.text-wrap > span.nav-arrow {
   display: none;
 }
-.wp_mm_wrapper ul.main-menu div.tecnibo-widget-submenu-1col h1 {
-  font-size: 15px;
-  font-weight: 400;
+.wp_mm_wrapper ul.main-menu div.tecnibo-widget-submenu-1col h1, .wp_mm_wrapper ul.main-menu div.tecnibo-widget-submenu-3col h1 {
+  font-size: 20px;
+  font-weight: 500;
   color: #f2f3f3;
+  line-height: 2.5rem;
+  margin: 20px auto;
+  letter-spacing: 4px;
 }
-.wp_mm_wrapper ul.main-menu div.tecnibo-widget-submenu-1col p {
-  font-size: 12px;
+.wp_mm_wrapper ul.main-menu div.tecnibo-widget-submenu-1col p, .wp_mm_wrapper ul.main-menu div.tecnibo-widget-submenu-3col p {
+  font-size: 14px;
   color: #f2f3f3;
+  letter-spacing: 2px;
+}
+.wp_mm_wrapper ul.main-menu div.tecnibo-widget-submenu-1col a.button-1col, .wp_mm_wrapper ul.main-menu div.tecnibo-widget-submenu-3col a.button-1col {
+  text-align: center;
+  width: 70%;
+  margin: 0 auto;
+}
+.wp_mm_wrapper ul.main-menu div.tecnibo-widget-submenu-1col a.button-1col:hover, .wp_mm_wrapper ul.main-menu div.tecnibo-widget-submenu-3col a.button-1col:hover {
+  background-color: #000;
+  color: #fff;
+}
+.wp_mm_wrapper ul.main-menu div.tecnibo-widget-submenu-3col a:hover {
+  background-color: transparent !important;
 }
 .wp_mm_wrapper .current_page_item > a,
 .wp_mm_wrapper .current-menu-item > a,
 .wp_mm_wrapper .current_page_item > a:hover,
 .wp_mm_wrapper .current-menu-item > a:hover {
   color: #313131;
-  border-left: 2px solid #7ac1b7;
+  border-left: 2px solid #aab203;
 }
 
 #toggle-menu-container {
@@ -414,6 +428,7 @@ div#wrap #top-bar-wrap {
 @media screen and (min-width: 959px) {
   div#wrap #top-bar-wrap {
     display: block;
+    z-index: 9999;
   }
 }
 
