Change the paraghraph color to #121212

--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -29,7 +29,7 @@ $color__border-submenu:#13aff0;
 /*--------------------------------------------------------------
 ## Paragraph
 --------------------------------------------------------------*/
-$color__text-paragraph: #867e79;
+$color__text-paragraph: #121212;
 
 
 
