--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
   font-family: "Merriweather", serif;
-  color: #867e79;
+  color: #121212;
   font-size: 1.5em;
 }
 
