--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,3 +26,8 @@ Version: 1.0
 # Menus Navigation ( Main Menu , Mobile Menu, Footer Menu )
 --------------------------------------------------------------*/
 @import "navigation/navigation";
+
+/*--------------------------------------------------------------
+# Forms
+--------------------------------------------------------------*/
+@import "forms/forms";
