Add media screen to hide the overlay mobile

--- a/sass/navigation/_mobile-menu.scss
+++ b/sass/navigation/_mobile-menu.scss
@@ -1,6 +1,9 @@
 
 html.wp_mm_enable, body.wp_mm_enable{
     overflow: hidden;
+    @media screen and (min-width: 959px){
+        overflow: visible;
+    }
 }
 body.wp_mm_enable{
     @media screen and (min-width:960px){
@@ -23,12 +26,19 @@ body.wp_mm_enable{
 .body_overlay.enabled{
     display: block;
     opacity: 1;
+    @media screen and (min-width: 959px){
+        display: none;
+        opacity: 0;
+    }
 }
 
 .wp_mm_wrapper.active{
     z-index: 999;
     opacity: 1;
     right: 0;
+    @media screen and (min-width: 959px){
+        opacity: 0;
+    }
     ul.main-menu{
         display: block;
     }
