--- a/sass/navigation/_navigation.scss
+++ b/sass/navigation/_navigation.scss
@@ -37,3 +37,15 @@
 .navigation .megamenu li ul.sub-menu{
     border:none!important;
 }
+.navigation ul.megamenu span.close{
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    display: inline-block;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 20px; 
+    &:hover{
+        color: $color__text-menu-item-a-hover;
+    }
+}
