--- a/style.css
+++ b/style.css
@@ -517,6 +517,19 @@ div#wrap #top-bar-wrap {
   border: none !important;
 }
 
+.navigation ul.megamenu span.close {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  display: inline-block;
+  padding: 10px;
+  cursor: pointer;
+  font-size: 20px;
+}
+.navigation ul.megamenu span.close:hover {
+  color: #e80100;
+}
+
 /*--------------------------------------------------------------
 # Forms
 --------------------------------------------------------------*/
